# templatr

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  requirements-dev.txt
.github/: labeler.yml
.github/workflows/: bandit.yml  test-source.yml
docs/: hugo.toml
src/templatr/: __init__.py  exceptions.py  formatter.py  helpers.py  template.py  variable.py
tests/integration/: conftest.py  test_template.py
tests/resources/: example.json  example.yaml
tests/unit/: test_formatter.py  test_helpers.py  test_init.py  test_template.py  test_variable.py
